--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,18 @@
         android:layout_weight="4"
         android:clickable="true" />
 
-    <TextView
-        android:id="@+id/mark_name_tv"
-        android:text="测试测试使用!测试测试使用!"
+    <RelativeLayout
+        android:id="@+id/mark_show_rl"
+        android:layout_alignParentBottom="true"
+        android:background="#fff"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:visibility="gone"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:visibility="gone">
+
+    <include layout="@layout/show_overview_message"/>
+
+    </RelativeLayout>
 
 
 </LinearLayout>
