--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent" >
+              android:layout_height="match_parent">
 
     <com.baidu.mapapi.map.MapView
         android:id="@+id/bmapView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
+        android:layout_height="match_parent"
         android:clickable="true" />
 
     <RelativeLayout
@@ -16,13 +16,24 @@
         android:layout_alignParentBottom="true"
         android:background="#fff"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="100dp"
         android:visibility="gone">
 
     <include layout="@layout/show_overview_message"/>
 
     </RelativeLayout>
 
+    <!-- 悬浮按钮 -->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/mark_map_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_margin="16dp"
+        android:src="@drawable/list"
+        app:backgroundTint="@color/colorLightBlue"
+        app:elevation="8dp"/>
 
-</LinearLayout>
+
+</RelativeLayout>
