--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorLightBlue">#00DDFF</color>
+    <color name="logButtonLightBlue">#33b5e5</color>
+    <color name="logButtonGray">#AAAAAA</color>
+    <color name="logButtonDarkBlue">#3E869F</color>
 </resources>
