--- a/app/src/main/res/layout/activity_list_card.xml
+++ b/app/src/main/res/layout/activity_list_card.xml
@@ -1,63 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout android:layout_height="match_parent"
+              android:orientation="vertical"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent">
 
-    <!--<FrameLayout-->
-    <!--CoordinatorLayout是一个加强版的FrameLayout-->
-    <android.support.design.widget.CoordinatorLayout
+    <RelativeLayout
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <include layout="@layout/display_format" />
+
+    </RelativeLayout>
+
+
+    <android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <!--防止Toolbar被RecyclerView挡掉-->
-<!--        <android.support.design.widget.AppBarLayout
+
+        <!--CoordinatorLayout是一个加强版的FrameLayout-->
+        <android.support.design.widget.CoordinatorLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                android:theme="@style/Widget.AppCompat.Light.ActionBar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_scrollFlags="scroll|enterAlways|snap"/>
-
-        </android.support.design.widget.AppBarLayout>-->
-
-        <!-- 刷新控件,下拉刷新 -->
-        <android.support.v4.widget.SwipeRefreshLayout
-            android:id="@+id/swipe_refresh"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
-            <!--卡片式布局效果控件，卡片的边缘弧度及阴影效果-->
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_view"
+            <!-- 刷新控件,下拉刷新 -->
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/swipe_refresh"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+                app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        </android.support.v4.widget.SwipeRefreshLayout>
+                <!--卡片式布局效果控件，卡片的边缘弧度及阴影效果-->
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
+            </android.support.v4.widget.SwipeRefreshLayout>
 
-        <!-- 悬浮按钮 -->
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/card_list_fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:src="@drawable/map"
-            app:backgroundTint="@color/colorLightBlue"
-            app:elevation="8dp"/>
+        </android.support.design.widget.CoordinatorLayout>
 
-        <!--</FrameLayout>-->
-    </android.support.design.widget.CoordinatorLayout>
+    </android.support.v4.widget.DrawerLayout>
 
-
-
-</android.support.v4.widget.DrawerLayout>
+</LinearLayout>
