--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundGray"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
@@ -32,7 +33,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:scaleType="centerCrop"
-
                     app:layout_collapseMode="parallax"
                     android:fitsSystemWindows="true"/>
 
@@ -51,117 +51,9 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-                <!--卡片布局-->
-                <android.support.v7.widget.CardView
-                    android:layout_height="wrap_content"
-                    android:layout_width="match_parent"
-                    android:layout_margin="15dp"
-                    app:cardCornerRadius="4dp">
 
-                    <LinearLayout
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <TextView
-                            android:id="@+id/hydrant_id_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/area_id_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/node_id_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/address_id_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/checkpoint_type_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/pressure_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/checkpoint_phone_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/longitude_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/latitude_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/status_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/principal_name_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/principal_phone_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/fire_control_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/fire_control_phone_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/description_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                        <TextView
-                            android:id="@+id/time_tv"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_margin="10dp"/>
-
-                    </LinearLayout>
-
-                </android.support.v7.widget.CardView>
+                <!-- 消防栓详细信息 -->
+                <include layout="@layout/detailed_information"/>
 
                 <!-- 此处显示水压状态曲线图 -->
                 <RelativeLayout
@@ -170,11 +62,18 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <com.github.mikephil.charting.charts.LineChart
-                        android:id="@+id/lineChart"
+                    <android.support.v7.widget.CardView
                         android:layout_width="match_parent"
-                        android:layout_height="300dp"
-                        android:layout_centerInParent="true"/>
+                        android:layout_height="wrap_content">
+
+                        <com.github.mikephil.charting.charts.LineChart
+                            android:id="@+id/lineChart"
+                            android:layout_width="match_parent"
+                            android:layout_height="300dp"
+                            android:layout_centerInParent="true"/>
+
+                    </android.support.v7.widget.CardView>
+
                 </RelativeLayout>
 
             </LinearLayout>
